--- a/adm/css/admin-custom.css
+++ b/adm/css/admin-custom.css
@@ -1178,3 +1178,52 @@ td .btn-group  {
 .page-edit textarea.pop-det {
   min-height: 18rem;
 }
+
+
+
+/*검색결과 키워드 강조효과*/
+.tbl.data .sch {
+  font-weight: var(--c-font-weight-6);
+  color: var(--krds-color-light-primary-50);
+}
+
+.alert-wrap {
+  margin-top: var(--krds-padding-3);
+}
+
+.alert-box {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: var(--krds-gap-3);
+  padding: var(--krds-padding-4) var(--krds-padding-6);
+  border-radius: var(--krds-radius-medium4);
+  border-width: 1px;
+  border-style: solid;
+}
+.alert-tit {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: var(--krds-pc-font-size-body-medium);
+  color: var(--krds-light-color-text-basic);
+}
+.alert-tit::before {
+  content: "";
+  display: inline-flex;
+  margin-right:var(--krds-gap-3);
+  width: var(--krds-size-height-4);
+  height: var(--krds-size-height-4);
+  background-color: var(--krds-color-light-gray-90);
+  background-color: transparent !important;
+  forced-color-adjust: none;
+  background-size: contain;
+}
+
+.alert-box.msg-error {
+  border-color: var(--krds-light-color-border-danger-light);
+  background-color: var(--krds-light-color-element-danger-lighter);
+}
+.alert-box.msg-error .alert-tit::before {
+  background-image: url(../../_common/resources/img/ico_system_danger.svg);
+}
